# group-project-java

./: .dockerignore  404.html  Dockerfile.backend  Dockerfile.streamlit  MARKING.md  README.md  docker-compose.yml  feature_importance_output.txt  feature_importance_selection.py  feature_selection.py  feature_selection_output.txt  frontend.jsx  function_app.py  index.html  main.py  mkdocs.yml  prediction.py  pyproject.toml  requirements.txt  retrain_model.py  streamlit_app.py
.github/workflows/: container.yaml  main_predictingforjava.yml
docs/: index.md
models/: logistic_model.pkl  telco_logistic_regression.joblib
notebooks/: telco_marimo.py
search/: search_index.json
tests/: test_prediction.py
