[project]
name = "telco-churn-predictions"
version = "0.1.0"
description = "Predicting churn in a telco"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.123.10",
    "joblib>=1.5.2",
    "marimo>=0.17.8",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "streamlit>=1.40.2",
    "requests>=2.32.3",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
]
